--- a/MainTex.tex
+++ b/MainTex.tex
@@ -29,6 +29,7 @@
 Data Mining Report\\[0.7cm]
 \HRule\\[4cm]  
 \large by 
+\\ Group 21:
 \\ Mikkel Stolborg
 \\ Hlynur Örn Haraldsson
 \vspace*{\stretch{2}} \normalsize %
@@ -273,13 +274,15 @@ By looking at Table \ref{confusionMatrix}, we can see that the clustering did no
 
 \clearpage
 \section{Conclusion}
-After looking at and analysing the Titanic data, we have gotten the following results. 
+To finish off this report, even though we failed our initial goal of using the clustering to increase the accuracy of our classification we still learned a lot from the data. We learned that majority of survivors were female of every class but for males the largest group of survivors were boys under the age of 13.
 
-In order to survive on the Titanic, you best chance is being a 
+But what we also learned is a bit of class geography, we saw that lower class people mostly came from Southampton(S) whilst the upper class people mostly came from Cherbourg. What we could also assume from the data is that Queenstown might be more poverty stricken compared to the other ports due to amount of passengers coming from that town.
+
+
 \subsection{Societal impact}
-Time travellers could use this information to go on the titanic to have the adventure of a lifetime trying to use statistics to survive.
+There isn't a big societal impact from this data mining but what could be done with this is feed information about passenger whose survived status is unknown and accurately predict their survival.
 
-The classification tree could be used to predict the survival of people whose whereabouts were unknown.
+In theory, time travellers could use this information to go on the titanic with the best amount of odds of surviving.
 
 \clearpage
 \appendix
