added main report

--- a/MainTex.tex
+++ b/MainTex.tex
@@ -305,7 +305,7 @@ In this appendix are the maps of the processes being used on the data.
 \caption{Orange map of the classification tree process.}
 \label{classTreeMap}
 \end{figure}
-
+\clearpage
 \section{K-Mean Clustering}
 \label{appenCluster}
 The distributions from the clustered data.
