--- a/MainTex.tex
+++ b/MainTex.tex
@@ -124,8 +124,8 @@ The secondary question arose when looking at clusters of the data.\\
 \textit{"Which societal data can be found in clusters of the Titanic data"}\\
 Looking at the data, we decide to try clustering to see if there was an emergent pattern. It would be interesting to see if the were a relation between wealth and number of children and the like. 
 \subsection{Tools for data mining}
-We choose to use the free tool called Orange\cite{orange}. This tool allowed to quickly manipulate the data, such that we could extract the interesting elements. 
-In the tool you manipulate the data by clicking and drawing connections between data elements and processing methods. All manipulations of our data is done in this tool, and the diagram we have drawn has 3 areas of focus. There is an area focussed on the preprocessing of the data, deleting and updating data as described later in section \ref{sec:preproc}. This area sends the processed data to a classification tree map and on to the K-means map. Each of these constitute the remaining areas. In each of the areas the data is processed using the appropriate algorithm, and visualized.
+We chose to use the free tool called Orange\cite{orange}. This tool allowed us to quickly manipulate the data, so that we could extract the interesting elements. 
+In the tool you can manipulate the data by clicking and drawing connections between data elements and processing methods. All manipulations of our data is done in this tool, and the diagram we have drawn has 3 areas of focus. There is an area focused on the preprocessing of the data, deleting and updating data as described later in section \ref{sec:preproc}. This area sends the processed data to a classification tree map and onto the K-means Clustering. Each of these constitute the remaining areas. In each of the areas the data is processed using the appropriate algorithm, and visualized.
 
 We have included the map of the process used for our data set in the orange framework in appendix \ref{appenOrange}, figure \ref{OrangeMap}.
 
@@ -136,7 +136,7 @@ This section goes through the data mining process, detailing the methods used an
 \label{sec:preproc}
 The data input we got from Kaggle\cite{kaggleData}, was quite neat and easy to work with. This lead to very little preprocessing and general expectation of functioning data. 
 However some of the data, even though extensive, had no sensible patterns from which information could be unlocked, and some data was discarded as they were not directly related to our research question.
-We choose to remove the Ticket Number and Cabin data from our data set, as there were no easily identifiable pattern and there were many missing values. 
+We chose to remove the Ticket Number and Cabin data from our data set, as there were no easily identifiable pattern and there were many missing values. 
 The Name of the passengers were discarded as well, as it was not of any use in the methods we chose to apply to the data. 
 
 The main reduction in entries in our data, rather than attributes, were to remove any entry with missing attributes. 182 entries were removed in total, mainly due to lack of age, whilst a few, 2, were removed because of lacking Embarked. 
